50.alpha - Devel
==========================

- Port Shortcuts Window to Shortcuts Dialog
- Add duplicate warnings preference
- Rename "Check against solution" preference to "Solution Warnings"
- Remove warnings and highlighter settings
- Remove custom game creation
- Fix earmark warnings not getting cleared up when disabling the setting
- Fix capitalization in print multiple dialog
- Fix right to left text direction for arrow keys (#121)
- Update translations:
  Jiri Grönroos (fi); Ekaterine Papava (ka); Juliano de Souza Camargo
  (pt_BR); Sergej A. (ru); Martin (sl); Anders Jonsson (sv); Yuri
  Chornoivan (uk); luming zh (zh_CN).

49.0 - September 12, 2025
==========================

- Updated translations:
  Bruce Cowan (en_GB); Jiri Grönroos (fi).

49.rc - August 29, 2025
==========================

- Restore long press behavior to v48
- Add button size workaround for gtk >= 4.19.2
- Fix fixed cells opening the picker
- Fix clear button sensitivity after undo/redo on the value picker
- Fix stuck focus during pause
- Updated translations:
  Daniel Rusek (cs); Asier Saratsua Garmendia (eu); Balázs Úr (hu).

49.beta - August 1, 2025
==========================

- Popdown the picker and unselect the grid on pausing
- Track keyboard input for focus handling with a 5 seconds timeout
- Fix clock not resuming on closing keyboard shortcuts
- Fix lock tooltip color in light mode
- Updated translations:
  Danial Behzadi (fa); Anders Jonsson (sv).

49.alpha - June 27, 2025
==========================

- Add a simple highscore implementation (#3)
- Add a lock button to the earmark picker and change the default
  behavior of the number picker buttons to popdown the picker
- Use tabular figures for numbers
- Always show the selected cell for keyboard users, and show it to
  mouse and touch users only when the cell is clicked
- Start the focus at the center of the grid
- Let the grid be unselected by pressing escape or clicking outside