@@ -5,6 +5,8 @@
 - Add duplicate warnings preference
 - Rename "Check against solution" preference to "Solution Warnings"
 - Remove warnings and highlighter settings
+- Add a backwards compatibility check that disables warning preferences
+  if the warnings setting was disabled
 - Remove custom game creation
 - Fix earmark warnings not getting cleared up when disabling the setting
 - Fix capitalization in print multiple dialog
